--- a/Ecommerce.Application/Ecommerce.Application.csproj
+++ b/Ecommerce.Application/Ecommerce.Application.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ecommerce.Domain\Ecommerce.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Commands\ProductCommands\" />
+    <Folder Include="Features\Commands\SaleCommands\" />
+    <Folder Include="Features\Commands\StoreCommands\" />
+    <Folder Include="Features\Commands\UserCommands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
