--- a/Ecommerce.API/appsettings.json
+++ b/Ecommerce.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb+srv://Juan123:123456ABC@cluster0.dm0w6sd.mongodb.net/"
+  }
 }
