--- a/Ecommerce.API/appsettings.json
+++ b/Ecommerce.API/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "mongodb+srv://Juan123:123456ABC@cluster0.dm0w6sd.mongodb.net/"
+  },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb+srv://Juan123:123456ABC@cluster0.dm0w6sd.mongodb.net/",
+    "DatabaseName": "authentication"
   }
 }
