Final endpoint testing

--- a/Ecommerce.API/appsettings.json
+++ b/Ecommerce.API/appsettings.json
@@ -6,11 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "mongodb+srv://Juan123:123456ABC@cluster0.dm0w6sd.mongodb.net/"
-  },
   "MongoDbSettings": {
     "ConnectionString": "mongodb+srv://Juan123:123456ABC@cluster0.dm0w6sd.mongodb.net/",
-    "DatabaseName": "authentication"
+    "DatabaseName": "Ecommerce"
   }
 }
